# llm-tcp-syn-scan

./: .gitignore  README.md  infer.py  infer_not_trained.py  init_check.py  pyproject.toml  sandbox.py  train.py
in/: PROMPT.md  dataset.csv
