[project]
name = "llm-tcp-syn-scan"
version = "0.1.0"
description = "LLM fine-tuning project using TinyLlama and PEFT to identify scanning in network"
requires-python = ">=3.10"

dependencies = [
  "transformers==4.41.0",
  "peft==0.10.0",
  "datasets==2.19.1",
  "accelerate==0.30.1",
  "bitsandbytes==0.43.0",
  "pandas==2.2.2",
  "torch==2.7.1",  # or your CUDA-specific version
]