[project]
name = "llm-tcp-syn-scan"
version = "0.1.0"
description = "LLM fine-tuning project using TinyLlama and PEFT to identify scanning in network"
requires-python = ">=3.10"

dependencies = [
  "transformers==4.41.2",
  "datasets==2.19.1",
  "accelerate==0.30.1",
  "pandas==2.3.0",
  "multidict==6.5.1",
  "huggingface-hub[hf_xet]>=0.23.0",
  "sentencepiece==0.2.0",
  "protobuf==6.31.1"
]
